Add new-price-table block 109932

--- a/dev/pug/utils/data.pug
+++ b/dev/pug/utils/data.pug
@@ -1524,6 +1524,51 @@
     ]
 
 -
+    var newMedPriceTable = [
+        {
+            id: 'basic',
+            popular: false,
+            title: `Старт`,
+            text: `Для малого и регионального бизнеса с незначительной конкурентной средой`,
+            list: [
+                    'Небольшой спрос в тематике',
+                    'Низкая конкуренция',
+                    'Возраст домена более 1 года',
+                    'Технический специалист с вашей стороны',
+                    'На сайт редко вносятся изменения'
+            ],
+            price: 40000
+        },
+        {
+            id: 'optima',
+            popular: true,
+            title: `Оптима`,
+            text: `Для среднего бизнеса с умеренной конкурентной средой`,
+            list: [
+                    'Значительный спрос в тематике',
+                    'Высокая конкуренция в поиске',
+                    'На сайте имеется большое количество страниц',
+                    'Целевая семантика: от 1000 запросов',
+                    'Сайт регулярно обновляется'
+            ],
+            price: 80000
+        },
+        {
+            id: 'vip',
+            popular: true,
+            title: `VIP`,
+            text: `Для среднего бизнеса с высококонкурентной средой`,
+            list: [
+                    '+ бюджет на контекстную, баннерную рекламу и т.д.',
+                    'Жесткая конкурентная среда',
+                    'Трафик с SEO дополняет трафик с контекстной рекламы и ремаркетинга',
+                    'По максимуму используем все каналы привлечения клиентов'
+            ],
+            price: 120000
+        },
+    ]
+
+-
     var calculator = {
         startPrice: 15000,
         concurrent: [
