--- a/dev/static/styles/modules/price-table.sass
+++ b/dev/static/styles/modules/price-table.sass
@@ -55,12 +55,38 @@
     &__feature-item
         color: #4f4f4f
 
+    &__list
+        margin-bottom: 60px
+        display: grid
+        gap: 10px
+        font-size: 16px
+        line-height: 1.3
+        color: #767676
+        +mds-block
+            font-size: 14px
+
+    &__list-item
+        position: relative
+        padding-left: 25px
+        &:before
+            position: absolute
+            left: 0
+            top: 0
+            content: '—'
+            color: $accent
+
     &__price-wrap
         border-top: 1px solid rgba($black, .1)
         padding-top: 20px
         display: flex
         margin-top: auto
         margin-bottom: 30px
+
+        &--center
+            margin-bottom: 20px
+            align-items: center
+            justify-content: center
+
         +md-block()
             flex-direction: column
 
@@ -78,6 +104,9 @@
         line-height: 32px
         font-weight: 500
         color: $accent
+        &--once
+            +mds-block
+                font-size: 18px
 
 
     &__small
