Add new-slider block 109932

--- a/dev/pug/new-med-site.pug
+++ b/dev/pug/new-med-site.pug
@@ -12,6 +12,7 @@ block content
     include modules/topcases
     +newFeedback(newFeedbacks, 'Отзывы')
     include pages/med-site/new-price-table
+    include pages/med-site/new-slider
     +avideo(promAvideo)
     +taber(tabsMainSteps, 'Основные этапы работы', 'light')
     include pages/med-site/latest-post
