--- a/dev/static/styles/modules/topcases.sass
+++ b/dev/static/styles/modules/topcases.sass
@@ -108,7 +108,8 @@
 	+md-block()
 		width: 100%
 
-.topcases-card__images
+.topcases-card__images,
+.new-slider__images
 	&::before
 		transition: opacity .3s ease-in-out
 		content: ''
