Add offer-now block 109932

--- a/dev/pug/new-med-site.pug
+++ b/dev/pug/new-med-site.pug
@@ -13,7 +13,7 @@ block content
     +newFeedback(newFeedbacks, 'Отзывы')
     include pages/med-site/new-price-table
     include pages/med-site/new-slider
-    +avideo(promAvideo)
+    include modules/offer-now
     +taber(tabsMainSteps, 'Основные этапы работы', 'light')
-    include pages/med-site/latest-post
     include modules/consult-form
+    include pages/med-site/latest-post
