--- a/dev/static/styles/modules/header/header.sass
+++ b/dev/static/styles/modules/header/header.sass
@@ -144,6 +144,7 @@
 		display: flex
 		justify-content: space-between
 		align-items: center
+		padding: 39px 0
 
 	&__top-left
 		display: flex
@@ -170,7 +171,7 @@
 		&-icon
 			max-width: 121px
 			max-height: 120px
-			fill: $main-font-color
+			fill: $accent
 
 		+sm-block()
 			margin-right: 20px
