--- a/dev/static/styles/modules/header/header.sass
+++ b/dev/static/styles/modules/header/header.sass
@@ -77,6 +77,10 @@
 				svg
 					fill: darken($white, 30%)
 
+		&__menu-item
+			&--mega
+				&::after
+					background-image: url("data:image/svg+xml,%3Csvg width='11' height='7' viewBox='0 0 11 7' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M0.469727 1.53039L1.53039 0.469727L5.00006 3.9394L8.46973 0.469727L9.53039 1.53039L5.00006 6.06072L0.469727 1.53039Z' fill='white'/%3E%3C/svg%3E%0A")
 		&__link
 			color: $white
 
