--- a/dev/pug/modules/header/megamenu.pug
+++ b/dev/pug/modules/header/megamenu.pug
@@ -32,7 +32,7 @@ include ../../utils/data
         ._cols
             ._footer
                 ul._second-list
-                    each item in headerMenu
+                    each item in headerSecondaryMenu
                         if (!item.mega)
                             li._second-item
                                 a._second-link(href=item.link, title=item.name)= item.name
