--- a/dev/pug/utils/data.pug
+++ b/dev/pug/utils/data.pug
@@ -11,19 +11,14 @@
             icon: 'raek',
         },
         {
-            name: 'FaceBook',
-            link: 'https://www.facebook.com/itcmediaru/',
-            icon: 'fb',
+            name: 'Telegram',
+            link: '#',
+            icon: 'tg',
         },
         {
             name: 'VK',
             link: 'https://vk.com/itcmedia',
             icon: 'vk',
-        },
-        {
-            name: 'Instagram',
-            link: 'https://www.instagram.com/itc_media/',
-            icon: 'insta',
         },
     ]
 
@@ -57,69 +52,92 @@
     ]
 
 -
+    var headerSecondaryMenu = [
+        {
+            name: 'Услуги',
+            link: 'cases.html',
+            mega: true
+        },
+        {
+            name: 'Кейсы',
+            link: 'cases.html'
+        },
+        {
+            name: 'Компания',
+            link: 'company.html'
+        },
+        {
+            name: 'Вакансии',
+            link: 'vacancy.html'
+        },
+        {
+            name: 'Блог',
+            link: 'blog.html'
+        },
+        {
+            name: 'Контакты',
+            link: 'contacts.html'
+        },
+        {
+            name: 'Отраслевая экспертиза',
+            link: '#'
+        },
+    ]
+
+-
     var newMega = [
         {
-            name: 'Продвижение сайтов',
+            name: 'Маркетинг',
             link: '#',
             sub: [
                 {
-                    name: 'Управление репутацией в поиске',
+                    name: 'Поисковое продвижение',
                     link: '#'
                 },
-            ]
-        },
-        {
-            name: 'Контекстная реклама',
-            link: 'context.html',
-            sub: [
                 {
-                    name: 'Медийная и баннерная реклама',
+                    name: 'Продвижение интернет-магазинов',
                     link: '#'
                 },
-            ]
-        },
-        {
-            name: 'Маркетинг в соцсетях',
-            link: '#',
-            sub: [
+                {
+                    name: 'Управление репутацией',
+                    link: '#'
+                },
+                {
+                    name: 'Контекстная реклама',
+                    link: '#'
+                },
+                {
+                    name: 'Повышение конверсии',
+                    link: '#'
+                },
+                {
+                    name: 'Маркетинг в соцсетях',
+                    link: '#'
+                },
                 {
                     name: 'Таргетированная реклама',
                     link: '#'
                 },
-                {
-                    name: 'Продвижение и реклама Instagram',
-                    link: '#'
-                },
             ]
         },
         {
-            name: 'Создание сайтов',
+            name: 'Продакшен',
             link: '#',
             sub: [
                 {
-                    name: 'Создание интернет-магазина',
-                    link: '#'
-                },
-            ]
-        },
-        {
-            name: 'Техническая поддержка',
-            link: '#',
-        },
-        {
-            name: 'Отраслевая экспертиза',
-            link: false,
-            sub: [
-                {
-                    name: 'Продвижение медицинских клиник',
+                    name: 'Разработка сайтов',
                     link: '#'
                 },
                 {
-                    name: 'Продвижение стоматологии',
+                    name: 'Создание интернет-магазинов',
                     link: '#'
                 },
                 {
-                    name: 'Реклама медпрепаратов',
+                    name: 'Техническая поддержка',
+                    link: '#'
+                },
+                {
+                    name: 'Интеграция с 1С',
                     link: '#'
                 },
             ]
