--- a/dev/static/styles/modules/footer/footer.sass
+++ b/dev/static/styles/modules/footer/footer.sass
@@ -1,4 +1,4 @@
-footer 
+footer
 	flex: 0 0 auto
 .footer
     margin-top: 80px
@@ -50,6 +50,7 @@ footer
         width: 116px
     &-fb,
     &-vk,
+    &-tg,
     &-insta
         width: 26px
 
