--- a/dev/static/styles/modules/header/header.sass
+++ b/dev/static/styles/modules/header/header.sass
@@ -44,6 +44,9 @@
 				background-color: $white
 				color: $accent
 
+		&__menu
+			display: none
+
 		&__city
 			display: flex
 			+sm-block
@@ -58,7 +61,6 @@
 		&__cities
 			a
 				color: $accent
-
 
 		&__phone
 			display: block
