--- a/dev/static/styles/modules/main-nav/main-nav.sass
+++ b/dev/static/styles/modules/main-nav/main-nav.sass
@@ -113,6 +113,9 @@
 		font-size: 22px
 		line-height: 30px
 		font-weight: bold
+		+md-block
+			font-size: 18px
+			line-height: 1.3
 		+sm-block()
 			margin-bottom: 20px
 
@@ -236,8 +239,7 @@
 		+megaItem()
 		+delayLoop()
 		+col()
-		+size(2)
-		+size-md(4)
+		+size(6)
 		+size-sm(12)
 		font-size: 18px
 		line-height: 24px
