Returned city choose in menu on desktop
110802

--- a/dev/static/styles/modules/header/header.sass
+++ b/dev/static/styles/modules/header/header.sass
@@ -245,14 +245,13 @@
 			display: none
 
 	&__city
-		display: none
 		position: relative
 		color: $accent
 
 		& > *
 			z-index: 5
 
-		+sm-block()
+		+mds-block()
 			display: none
 
 		.icon-triangle-down
@@ -280,7 +279,6 @@
 		opacity: 0
 		transform: translateY(10px)
 		transition: all .3s ease
-
 
 	&__phone
 		display: none
