--- a/dev/pug/pages/med-site/promotion.pug
+++ b/dev/pug/pages/med-site/promotion.pug
@@ -1,11 +1,77 @@
 -
     const cards = [
-       'Многопрофильные клиники',
-       'Диагностические центры',
-       'Фармкомпании',
-       'Косметологии',
-       'Стоматологии',
-       'Больницы',
+        {
+            title: 'Многопрофильные клиники',
+            listTitle: '',
+            list: [
+                "Проработка структуры разделов услуг как для поисковых систем, так и для пользователя.",
+                "Проработка факторов экспертности по каждому направлению услуг.",
+                "Проработка шаблонов страниц услуг по каждому направлению профиля.",
+                "Работа над полным охватом продвигаемой семантики. Работа с активной СЯ и ее расширение.",
+                "Проработка раздела «Врачи» с ориентацией на многопрофильность клиники.",
+                "Проработка раздела «Контакты», а также информации о контактах на страницах услуг и на картах. Очень важно для данной тематики, так как пользователю нужно прибыть к месту оказания услуги.",
+            ]
+        },
+        {
+            title: 'Диагностические центры',
+            listTitle: 'Что важно при продвижении сайта диагностического центра?',
+            list: [
+                "Упор на более сложные транзакционные запросы в семантике, например: пройти МР-ангиографию сосудов.",
+                "Проработка шаблонов услуг с точки зрения конвертируемости в заявки (запись на прием).",
+                "Грамотная проработка структуры услуг для эффективного продвижения и быстрого поиска пользователем необходимого направления диагностики.",
+                "Проработка не только страниц услуг, но и профилей врачей под конкретные направления диагностики и запись на них.",
+                "Корректировка шаблона страниц услуг для глубокой проработки релевантности по интенту запросов и LSI вхождениям.",
+                "Работа над представлением данных о геолокации как на самом сайте, так и на картах Яндекс и Google.",
+            ]
+        },
+        {
+            title: 'Фармкомпании',
+            listTitle: 'Что важно при продвижении фармацевтической компании?',
+            list: [
+                "При продвижении фармацевтики важно учесть все нюансы, например запрет на рекламу рецептурных препаратов.",
+                "Разработка УТП (уникального торгового предложения), которое будет отличать нас от конкурентов.",
+                "Изучение продукта, исследование аудитории и рынка конкурентов.",
+                "Отражение УТП и продающих триггеров в прототипах и ТЗ, для удобства согласования и реализации на сайте.",
+                "Сбор семантики исходя из спроса. Разработка стратегии для повышения спроса на рынке на данные препараты.",
+                "Стандартные работы по отработке экспертности медицинской компании/сайта.",
+            ]
+        },
+        {
+            title: 'Косметологии',
+            listTitle: 'Что важно учесть при продвижении сайта косметологии?',
+            list: [
+                "Грамотно проработанная иерархия разделов услуг. Наличие меню на 100% понятного для пользователя.",
+                "Проработка в разделе «Косметологи/Врачи» профиля каждого врача. Перечисление информации об образовании, опыте, специализации.",
+                "Высокая информативность и визуализация. Здесь важны как фото самих кабинетов и аппаратов, так и лица врачей.",
+                "Наличие полного прайса на услуги косметолога по всем направлениям услуг с возможностью записи на прием на конкретную услугу и к конкретному врачу.",
+                "Очень желательно наличие фотография ДО и ПОСЛЕ процедуры. Также наличие описаний с показаниями и действием процедуры.",
+                "Точечная проработка шаблонов страниц услуг с точки зрения всех необходимых элементов для ранжирования в ПС и высокой конверсии (в том числе предложение сопутствующих услуг).",
+            ]
+        },
+        {
+            title: 'Стоматологии',
+            listTitle: 'Важные критерии для продвижения сайта стоматологии:',
+            list: [
+                "Грамотная проработка навигации по услугам сайта. Разделение взрослой и детской стоматологии.",
+                "Наличие понятного прайс-листа как в отдельном разделе, так и на страницах услуг.",
+                "Наличие УТП (уникального торгового предложения), например акции и скидки на последующие услуги, беспроцентная рассрочка.",
+                "Проработка раздела врачей с созданием отдельной страницы под профиль каждого врача (с указанием образования, опыта, специализации).",
+                "Работа с репутаций клиники. Наличие отзывов со сканами или скринами из мессенджеров. Работа с отзывами на внешних площадках.",
+                "Наличие функционала удобной записи на прием по конкретному адресу и направлению услуги к желаемому врачу на выбранное время.",
+            ]
+        },
+        {
+            title: 'Больницы',
+            listTitle: 'Особенности при продвижении сайта больницы:',
+            list: [
+                "Подбор СЯ с подходящим интентом. Важно, чтобы в семантике были только ключи, предполагающие лечение с госпитализацией.",
+                "Проработка страниц услуг с анонсированием всей необходимой инфо с показаниями и подготовке к госпитализации.",
+                "Акцентирование на качестве лечения с госпитализацией в нашей больнице. Добавление УТП и конверсионных триггеров.",
+                "Наличие фотографий врачей и медицинского персонала с указанием имен и специализаций, а также ссылкой на отдельную страницу подробно заполненного профиля.",
+                "Обязательное наличие фотографий палат разного класса с указанием цен и перечислением услуг, которые входят в цену.",
+                "Материалы, подтверждающие экспертность медучреждения в целом. Наличие сканов лицензий, номера государственной аккредитации."
+            ]
+        },
     ]
 
 section.section
@@ -13,4 +79,4 @@ section.section
         h2.h2._title Мы продвигаем медицинские сайты в топ 3
         ._cards
             each card in cards
-                ._card= card
+                ._card= card.title
