--- a/dev/pug/pages/med-site/promotion.pug
+++ b/dev/pug/pages/med-site/promotion.pug
@@ -1,6 +1,8 @@
 -
     const cards = [
         {
+            id: 'med-promotion-1',
+            image: 'image359',
             title: 'Многопрофильные клиники',
             listTitle: '',
             list: [
@@ -13,6 +15,8 @@
             ]
         },
         {
+            id: 'med-promotion-2',
+            image: 'image358',
             title: 'Диагностические центры',
             listTitle: 'Что важно при продвижении сайта диагностического центра?',
             list: [
@@ -25,6 +29,8 @@
             ]
         },
         {
+            id: 'med-promotion-3',
+            image: 'image360',
             title: 'Фармкомпании',
             listTitle: 'Что важно при продвижении фармацевтической компании?',
             list: [
@@ -37,6 +43,8 @@
             ]
         },
         {
+            id: 'med-promotion-4',
+            image: 'image361',
             title: 'Косметологии',
             listTitle: 'Что важно учесть при продвижении сайта косметологии?',
             list: [
@@ -49,6 +57,8 @@
             ]
         },
         {
+            id: 'med-promotion-5',
+            image: 'image362',
             title: 'Стоматологии',
             listTitle: 'Важные критерии для продвижения сайта стоматологии:',
             list: [
@@ -61,6 +71,8 @@
             ]
         },
         {
+            id: 'med-promotion-6',
+            image: 'image363',
             title: 'Больницы',
             listTitle: 'Особенности при продвижении сайта больницы:',
             list: [
@@ -79,4 +91,30 @@ section.section
         h2.h2._title Мы продвигаем медицинские сайты в топ 3
         ._cards
             each card in cards
-                ._card= card.title
+                ._card
+                    span= card.title
+                    button.button(
+                        data-fancybox
+                        data-src='#' + card.id
+                    )._more
+                        +icon('question', null, 20)._question-icon
+                ._description(
+                    style='display: none'
+                    id= card.id
+                )
+                    ._modal-content
+                        picture._picture
+                            source(
+                                srcset= 'images/content/' + card.image + '.jpg 1x, images/content/' + card.image + '@2x.jpg 2x'
+                                type= 'image/jpeg'
+                            )
+                            img(
+                                src= 'images/content/' + card.image + '.jpg'
+                                alt= card.title
+                            )
+                        ._title= card.title
+                        if card.listTitle
+                            ._list-caption= card.listTitle
+                        ul._list
+                            each item in card.list
+                                li._item= item
