--- a/dev/static/styles/modules/promotion.sass
+++ b/dev/static/styles/modules/promotion.sass
@@ -1,26 +1,113 @@
 .promotion
-	&__cards
-		display: grid
-		grid-template-columns: repeat(6, 1fr)
-		gap: 20px
-		+md-block
-			grid-template-columns: repeat(3, 1fr)
-		+mds-block
-			grid-template-columns: repeat(2, 1fr)
-			gap: 15px
+  &__cards
+    display: grid
+    grid-template-columns: repeat(6, 1fr)
+    gap: 20px
+    +md-block
+      grid-template-columns: repeat(3, 1fr)
+    +mds-block
+      grid-template-columns: repeat(2, 1fr)
+      gap: 15px
 
-	&__card
-		background-color: $grey
-		display: flex
-		align-items: center
-		justify-content: center
-		text-align: center
-		padding: 16px
-		min-height: 162px
-		font-size: 16px
-		line-height: 1.3
-		+mds-block
-			min-height: 130px
-			font-size: 14px
-		+sm-block
-			min-height: 116px
+  &__card
+    background-color: $grey
+    display: grid
+    align-items: center
+    justify-content: center
+    align-content: center
+    gap: 10px
+    text-align: center
+    padding: 16px
+    min-height: 162px
+    font-size: 16px
+    line-height: 1.3
+    +mds-block
+      min-height: 130px
+      font-size: 14px
+    +sm-block
+      min-height: 116px
+
+  &__more
+    justify-self: center
+    border: none
+    padding: 0
+    cursor: pointer
+
+  &__description
+    margin-right: 30px
+    margin-left: 30px
+    padding: 74px 40px 40px
+    +sm-block
+      padding-right: 30px
+      padding-left: 30px
+      padding-top: 69px
+    +xs-block
+      margin-right: 15px
+      margin-left: 15px
+      padding-right: 15px
+      padding-left: 15px
+
+    .fancybox-close-small
+      transform: scale(1.5)
+      right: 20px
+      opacity: .5
+      top: 20px
+      +sm-block
+        right: 10px
+        +xs-block
+          right: 5px
+
+  &__modal-content
+    max-width: 720px
+    display: grid
+    gap: 15px
+
+  &__title
+    color: $accent
+    font-weight: 500
+    font-size: 24px
+    line-height: 1.33
+    padding-bottom: 15px
+    margin-top: 15px
+    box-shadow: inset 0 -1px 0 0 rgba($black, .1)
+    +sm-block
+      font-size: 18px
+      line-height: 1.33
+      margin-top: 10px
+
+  &__list-caption
+    font-weight: 500
+    font-size: 20px
+    line-height: 1.4
+    +sm-block
+      font-size: 16px
+      line-height: 1.5
+
+  &__list
+    display: grid
+    grid-template-columns: repeat(2, 1fr)
+    gap: 15px 40px
+    font-size: 16px
+    line-height: 1.3
+    font-weight: 300
+    color: #767676
+    +sm-block
+      gap: 10px
+      font-size: 14px
+      grid-template-columns: 1fr
+    +xs-block
+      gap: 15px
+
+  &__item
+    display: grid
+    grid-template-columns: 32px 1fr
+    gap: 10px
+
+    &::before
+      content: ''
+      display: inline-block
+      background-image: url("data:image/svg+xml,%3Csvg width='25' height='25' viewBox='0 0 25 25' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M18.3618 9.15486C18.5524 9.35467 18.5449 9.67116 18.3451 9.86178L11.0076 16.8618C10.8143 17.0462 10.5102 17.0461 10.3171 16.8615L6.65456 13.3615C6.45492 13.1707 6.44774 12.8542 6.63852 12.6546C6.8293 12.4549 7.1458 12.4477 7.34544 12.6385L10.6628 15.8087L17.6549 9.13822C17.8547 8.94761 18.1712 8.95506 18.3618 9.15486Z' fill='%231616CC'/%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M12.5 1C6.14873 1 1 6.14873 1 12.5C1 18.8513 6.14873 24 12.5 24C18.8513 24 24 18.8513 24 12.5C24 6.14873 18.8513 1 12.5 1ZM0 12.5C0 5.59644 5.59644 0 12.5 0C19.4036 0 25 5.59644 25 12.5C25 19.4036 19.4036 25 12.5 25C5.59644 25 0 19.4036 0 12.5Z' fill='%231616CC'/%3E%3C/svg%3E%0A")
+      background-repeat: no-repeat
+      background-position: center center
+      width: 32px
+      height: 32px
