--- a/dev/pug/pages/med-site/promotion.pug
+++ b/dev/pug/pages/med-site/promotion.pug
@@ -91,13 +91,10 @@ section.section
         h2.h2._title Мы продвигаем медицинские сайты в топ 3
         ._cards
             each card in cards
-                ._card
-                    span= card.title
-                    button.button(
-                        data-fancybox
-                        data-src='#' + card.id
-                    )._more
-                        +icon('question', null, 20)._question-icon
+                button(
+                    data-fancybox
+                    data-src='#' + card.id
+                )._card= card.title
                 ._description(
                     style='display: none'
                     id= card.id
