--- a/dev/static/styles/modules/promotion.sass
+++ b/dev/static/styles/modules/promotion.sass
@@ -21,6 +21,15 @@
     min-height: 162px
     font-size: 16px
     line-height: 1.3
+    border: none
+    cursor: pointer
+    +baseTransition()
+
+    &:hover, &:focus
+      background-color: $accent
+      color: $white
+      +baseTransition()
+
     +mds-block
       min-height: 130px
       font-size: 14px
