Add button to promotion cards popup
115920

--- a/dev/pug/pages/med-site/promotion.pug
+++ b/dev/pug/pages/med-site/promotion.pug
@@ -115,3 +115,4 @@ section.section
                         ul._list
                             each item in card.list
                                 li._item= item
+                        button.b-btn.-flat.-blue._btn(data-target='price-type-' + card.id) Заказать консультацию
